--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 
-jobs:
+
   deploy:
     runs-on: ubuntu-latest
+    need: build
     steps:
       -
         name: Checkout
